force-app/main/default/objects/Dealer_Summary__c/Dealer_Summary__c.object-meta.xml
<CustomObject>
    <label>Dealer Summary</label>
    <nameField>
        <label>Dealer Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealers Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>