force-app/main/default/objects/Dealer_Summary__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealers Summaries</relationshipLabel>
    <relationshipName>Dealers_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>