force-app/main/default/objects/Dealer_Summary__c/fields/IV_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>IV_Total_Amount__c</fullName>
    <label>IV Total Amount</label>
    <summarizedField>Dealer_Summary_Variety__c.IV_Amount__c</summarizedField>
    <summaryForeignKey>Dealer_Summary_Variety__c.Dealer_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>