force-app/main/default/objects/Dealer_Summary__c/fields/RP_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>RP_Total_Amount__c</fullName>
    <label>RP Total Amount</label>
    <summarizedField>Dealer_Summary_Variety__c.RP_Amount__c</summarizedField>
    <summaryForeignKey>Dealer_Summary_Variety__c.Dealer_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>